--- a/pres-style.css
+++ b/pres-style.css
@@ -43,6 +43,11 @@
   line-height: 1.3; 
 }
 
+.reveal code.codeinline {
+  font-size: 100%;
+  line-height: 1.0;
+}
+
 .reveal ul.pbsmaller, .reveal table.pbsmaller, .reveal p.pbsmaller, div.pbsmaller {
     font-size: 70%; }
 
